--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
-    "vue": "^3.5.25"
+    "pinia": "^3.0.4",
+    "vue": "^3.5.25",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.2",
